add information to README.md

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <footer>
-      created by <a href="">devalade</a> - <a href="">devChallenges.io</a>
+      created by <a href="https://github.com/devalade">devalade</a> - <a href="https://devchallenges.io">devChallenges.io</a>
     </footer>
   </body>
 </html>
